# yandex_py

./: pyproject.toml
chapter_2_3/: B.py  D.py  E.py  F.py  G.py  I.py  J.py  K.py  L.py  M.py  Q.py  S.py
chapter_2_4/: A.py  B.py  C.py  D.py  E.py  F.py  H.py  J.py  K.py  L.py  M.py  N.py  P.py  R.py  TG_bot_idea.py  Tkinter.py  calculator.py  crosses_and_crosses_2.py  k.py  pictory.py  ping_pong.py  sapper.py  walrus_example.py
checkio/: most_frequent.py  sum_text_num.py
codechick/: absolute.py  accept_into_movie.py  add_odd_to_n.py  alphanumeric_restriction.py  check_equals.py  count_ones.py  count_vowels.py  equation.py  find_digit_amount.py  first_last.py  get_budgets.py  get_vote_count.py  halloween.py  has_bugs.py  has_same_bread.py  has_spaces.py  inches_to_feet.py  is_empty.py  is_isogram.py  is_safe_bridge.py  is_truthy.py  is_valid_pin.py  left_digit.py  length.py  less_than_or_equal_to_zero.py  letters_only.py  match.py  multiply_nums.py  next_edge.py  num_of_digits.py  profitable_gamble.py  programmers.py  remove_empty_arrays.py  remove_vowels.py  return_only_integer.py  reverse.py  smash_factor.py  sum_recursively.py  xo.py
oop/: alphabet.py
oop/examples/: class_methods.py  file_01_12.py  file_03_11.py  file_10_11.py  file_11_08.py  file_13_10.py  file_14_08.py  file_17_11.py  file_18_08.py  file_20_10.py  file_27_10.py  polymorphism.py  static_methods.py
oop/module_1_3/: examples_06_10.py  task_10.py  task_11.py  task_3.py  task_4.py  task_5.py  task_6.py  (+3 more)
others/: binary_search.py  fibbonaci.py  sorting_the_list.py
practicum/: __init__.py
(+51 files in other folders)
