[tool.poetry]
name = "Pygame"
version = "0.1.0"
description = "Игры на Python 3"
authors = ["Maksim Mitskevich <spirit_vrs@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
